--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.admin.ThemDoUongActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ThemTheLoaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ChinhSuaTheLoaiActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.user.GioHangActivity"
             android:exported="false" />
         <activity
