--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,27 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.admin.ChinhSuaKhuyenMaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ThemKhuyenMaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ChuongTrinhKhuyenMaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ChinhSuaToppingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ThemToppingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.DiKemDoUongActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.ChinhSuaDoUongActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.admin.ThemDoUongActivity"
             android:exported="false" />
         <activity
