--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.user.KhuyenMaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.user.DiaChiGiaoHangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.user.PhuongThucThanhToanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.user.DatHangActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.admin.ChinhSuaKhuyenMaiActivity"
             android:exported="false" />
         <activity
