--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/coffelogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/coffelogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoffeeAppManage"
         android:usesCleartextTraffic="true"
@@ -59,9 +59,9 @@
         <activity
             android:name=".activity.admin.ChinhSuaTheLoaiActivity"
             android:exported="false" />
-        <activity
-            android:name=".activity.user.GioHangActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".activity.user.GioHangActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".activity.user.LienHeActivity"
             android:exported="false" />
